<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="quizimage">QuizImage</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations</string>
    <string name="username">Username</string>
    <string name="finish">Finish</string>
</resources>